--- a/website/docs/pages/2024.md
+++ b/website/docs/pages/2024.md
@@ -3,7 +3,7 @@
 
 
 
-There will be two worshops during the week **19th April to 22nd April 2024**: one focussed on Probabilistic semantics and one focussed on Network Verification.
+There will be two workshops during the week **19th April to 22nd April 2024**: one focussed on Probabilistic Semantics and one focussed on Network Verification.
 
 
 ### Participants Learning and Verification workshop 
@@ -20,6 +20,7 @@ Gilles Barthe,
 Jana Wagemaker, 
 Joost-Pieter Katoen, 
 Joseph Tassarotti, 
+Justin Hsu,
 Mateo Torres-Ruiz, 
 Noam Zilberstein, 
 Paolo Perrone, 
@@ -46,7 +47,7 @@ Stefan Schmid,
 Steffen Smolka, 
 Todd Millstein.
 
-### Group Picture both workshops
+### Group Picture (both workshops)
 
 
 ![Group Picture](img/2024.jpg)
