--- a/website/docs/pages/2018.md
+++ b/website/docs/pages/2018.md
@@ -1,7 +1,7 @@
 # Bellairs 2018: Workshop Logical Foundations for Data Science
 
 
-There will be two worshops during the week **16th March to 23rd March 2018**: one focussed on Logical Foundations for Data Science and one focussed on Compositional methods for network diagrams and component-based systems, organised by [Fabio Zanasi](http://www.zanasi.com/fabio). 
+There will be two workshops during the week **16th March to 23rd March 2018**: one focussed on Logical Foundations for Data Science and one focussed on Compositional methods for network diagrams and component-based systems, organised by [Fabio Zanasi](http://www.zanasi.com/fabio). 
 
 
 ### Participants LFDS workshop 
