--- a/website/docs/pages/2019.md
+++ b/website/docs/pages/2019.md
@@ -2,7 +2,7 @@
 
 
 
-There will be two worshops during the week **15th March to 22nd March 2019**: one focussed on Learning and Verification and one focussed on [Higher-order Probability Theory](https://www.cs.mcgill.ca/~prakash/Bellairs/19/wshop19.html).
+There will be two workshops during the week **15th March to 22nd March 2019**: one focussed on Learning and Verification and one focussed on [Higher-order Probability Theory](https://www.cs.mcgill.ca/~prakash/Bellairs/19/wshop19.html).
 
 
 ### Participants Learning and Verification workshop 
