--- a/website/docs/pages/2020.md
+++ b/website/docs/pages/2020.md
@@ -3,10 +3,10 @@
 ## <span style="color:red">Workshops cancelled due to the COVID-19 pandemic.</span>
 
 
-There will be two worshops during the week **13th March to 20th March 2020**: one focussed on Probabilistic Programming, organised by Alexandra Silva and Prakash Panangaden, and one focussed on Network Verification, organised by [Nate Foster](https://www.cs.cornell.edu/~jnfoster/).
+There will be two workshops during the week **13th March to 20th March 2020**: one focussed on Probabilistic Programming, organised by Alexandra Silva and Prakash Panangaden, and one focussed on Network Verification, organised by [Nate Foster](https://www.cs.cornell.edu/~jnfoster/).
 
 
-### Participants Probabilistic Programmin workshop 
+### Participants Probabilistic Programming workshop 
 
 Alexandra Silva,
 Prakash Pananganden,
