--- a/website/docs/pages/2014.md
+++ b/website/docs/pages/2014.md
@@ -1,7 +1,7 @@
 # Bellairs 2014: Workshops on Duality and Probabilistic Systems
 
 
-There will be two workshops during the week **14th March to 21st March 2014**: one focussed on duality and one focussed on probabilistic systems. We will arrange it so that only half the time will both meetings run simultaneously so that people can maximize attendance at both meetings if they want. We hope that there will be some cross fertilization of ideas across the two meetings. There will also be ample time for discussions and working groups.
+There will be two workshops during the week **14th March to 21st March 2014**: one focused on duality and one focused on probabilistic systems. We will arrange it so that only half the time will both meetings run simultaneously so that people can maximize attendance at both meetings if they want. We hope that there will be some cross fertilization of ideas across the two meetings. There will also be ample time for discussions and working groups.
 
 The workshop on Duality will be on topics related to duality in its various manifestations. These include Stone-type dualities, Gelfand duality, duality theorems in logic, algebra, formal language theory, denotational semantics, Markov process theory, quantum mechanics and whatever else may appeal to the audience. 
 
