--- a/website/docs/pages/2016.md
+++ b/website/docs/pages/2016.md
@@ -1,7 +1,7 @@
-# Bellairs 2016: Workshop on Formal Methods for Software-Defined Networks
+# Bellairs 2016: Workshops on Formal Methods for Software-Defined Networks and Causality in Quantum Foundations
 
 
-There will be two workshops during the week **11th March to 18th March 2016**. One focussed on topics related to formal methods for software-defined networks. These include various aspects related to programming language design, verification, security, etc.  The other workshop will be on Causality in Quantum Foundations, organised by Bob Coeke and Prakash Panangaden. 
+There will be two workshops during the week **11th March to 18th March 2016**. One focused on topics related to formal methods for software-defined networks. These include various aspects related to programming language design, verification, security, etc.  The other workshop will be on Causality in Quantum Foundations, organised by Bob Coeke and Prakash Panangaden. 
 
 
 
