--- a/website/docs/pages/2017.md
+++ b/website/docs/pages/2017.md
@@ -1,7 +1,7 @@
-# Bellairs 2017: Workshops on Probabilistic Programming Languages workshop
+# Bellairs 2017: Workshops on Probabilistic Programming Languages and Dynamical Systems
 
 
-There will be two workshops during the week **10th March to 17th March 2017**: one focussed on Probabilistic Programming Languages and another on Dynamical Systems, organised by Joel Ouaknine and Ben Worrell.
+There will be two workshops during the week **10th March to 17th March 2017**: one focused on Probabilistic Programming Languages, organized by Alexandra Silva and Prkash Panangaden, and another on Dynamical Systems, organised by Joel Ouaknine and Ben Worrell.
 
 
 ### Participants Probabilistic Programming Languages workshop
