--- a/website/docs/pages/2018.md
+++ b/website/docs/pages/2018.md
@@ -1,7 +1,7 @@
-# Bellairs 2018: Workshop Logical Foundations for Data Science
+# Bellairs 2018: Workshop Logical Foundations for Data Science and Compositional methods for network diagrams
 
 
-There will be two workshops during the week **16th March to 23rd March 2018**: one focussed on Logical Foundations for Data Science and one focussed on Compositional methods for network diagrams and component-based systems, organised by [Fabio Zanasi](http://www.zanasi.com/fabio). 
+There will be two workshops during the week **16th March to 23rd March 2018**: one focused on Logical Foundations for Data Science, organized by Prakash Panangaden and Alexandra Silva, and one focused on Compositional methods for network diagrams and component-based systems, organised by [Fabio Zanasi](http://www.zanasi.com/fabio). 
 
 
 ### Participants LFDS workshop 
@@ -30,7 +30,7 @@ Vincent Danos.
 
 ## Organisational details 
 
-The workshop organizers are Prakash Panangaden and Alexandra Silva. Attendance is by invitation only.
+The workshop organizers are Prakash Panangaden and Alexandra Silva (Logical Foundations) and Fabio Zanasi (Compositional methods). Attendance is by invitation only.
 
 The workshop period runs from 16th March 2018 to 23rd March 2018 and will take place at the Bellairs Research Institute in Barbados. The actual meeting dates are from the 18th March (Sunday) to 22nd  March (Thursday). 
 
