--- a/website/docs/pages/2019.md
+++ b/website/docs/pages/2019.md
@@ -1,8 +1,8 @@
-# Bellairs 2019: Workshop on Learning and Verification
+# Bellairs 2019: Workshops on Learning and Verification and Higher-order Probability Theory
 
 
 
-There will be two workshops during the week **15th March to 22nd March 2019**: one focussed on Learning and Verification and one focussed on [Higher-order Probability Theory](https://www.cs.mcgill.ca/~prakash/Bellairs/19/wshop19.html).
+There will be two workshops during the week **15th March to 22nd March 2019**: one focused on Learning and Verification and one focused on [Higher-order Probability Theory](https://www.cs.mcgill.ca/~prakash/Bellairs/19/wshop19.html).
 
 
 ### Participants Learning and Verification workshop 
