--- a/website/docs/pages/2020.md
+++ b/website/docs/pages/2020.md
@@ -3,7 +3,7 @@
 ## <span style="color:red">Workshops cancelled due to the COVID-19 pandemic.</span>
 
 
-There will be two workshops during the week **13th March to 20th March 2020**: one focussed on Probabilistic Programming, organised by Alexandra Silva and Prakash Panangaden, and one focussed on Network Verification, organised by [Nate Foster](https://www.cs.cornell.edu/~jnfoster/).
+There will be two workshops during the week **13th March to 20th March 2020**: one focused on Probabilistic Programming, organised by Alexandra Silva and Prakash Panangaden, and one focused on Network Verification, organised by [Nate Foster](https://www.cs.cornell.edu/~jnfoster/).
 
 
 ### Participants Probabilistic Programming workshop 
