--- a/website/docs/pages/2024.md
+++ b/website/docs/pages/2024.md
@@ -1,51 +1,51 @@
-# Bellairs 2024: Workshop on Four Decades of Probabilistic Semantics.  
+# Bellairs 2024: Workshops on Four Decades of Probabilistic Semantics and Network Verification.  
 
 
 
 
-There will be two workshops during the week **19th April to 22nd April 2024**: one focussed on Probabilistic Semantics and one focussed on Network Verification.
+There will be two workshops during the week **19th April to 22nd April 2024**: one  on Probabilistic Semantics and one on Network Verification.
 
 
 ### Participants Learning and Verification workshop 
 
+Pedro Azevedo de Amorim, 
+Gilles Barthe, 
+Filippo Bonchi, 
+Franck van Breugel, 
+Florence Clerc, 
+Justin Hsu, 
+Benjamin Kaminski, 
+Tobias Kappé, 
+Joost-Pieter Katoen, 
+Dexter Kozen, 
+Radu Mardare, 
+Paolo Perrone, 
+Wojciech Rozowski, 
 Alexandra Silva, 
 Ana Sokolova, 
-Benjamin Kaminski, 
-Dexter Kozen, 
-Fabio Zanasi, 
-Filippo Bonchi, 
-Florence Clerc, 
-Franck van Breugel, 
-Gilles Barthe, 
-Jana Wagemaker, 
-Joost-Pieter Katoen, 
-Joseph Tassarotti, 
-Justin Hsu,
-Mateo Torres-Ruiz, 
-Noam Zilberstein, 
-Paolo Perrone, 
-Pedro Azevedo de Amorim, 
-Radu Mardare, 
 Sam Staton, 
-Tobias Kappé, 
-Wojciech Rozowski.
+Joseph Tassarotti, 
+Mateo Torres-Ruiz, 
+Jana Wagemaker, 
+Fabio Zanasi, 
+Noam Zilberstein.
 
 ### Participants Network Verification workshop 
 
-Aarti Gupta, 
-Alwyn E. Goodloe, 
-Brighten Godfrey, 
-David Darais, 
-Fabian Ruffy, 
-Huayi Duan, 
-Jules Jacobs, 
-Malek Ben Romdhane, 
 Mina Tahmasbi Arashloo, 
-Nate Foster, 
 Nikolaj Bjorner, 
+David Darais, 
+Huayi Duan, 
+Nate Foster, 
+Brighten Godfrey, 
+Alwyn E. Goodloe, 
+Aarti Gupta, 
+Jules Jacobs, 
+Todd Millstein, 
+Malek Ben Romdhane, 
+Fabian Ruffy, 
 Stefan Schmid, 
-Steffen Smolka, 
-Todd Millstein.
+Steffen Smolka.
 
 ### Group Picture (both workshops)
 
